<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welc_name">Gabriel Yeung</string>
    <string name="welc_title">Mine Seeker</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="menu_title">Main Menu</string>
    <string name="menu_options">Options</string>
    <string name="menu_help">Help</string>
    <string name="menu_">play</string>
    <string name="you_win">YOU WIN!</string>
    <string name="mines"># Mines</string>
    <string name="board_size">Board Size</string>
    <string name="reset_games_highscores"><![CDATA[Reset Games & Highscores]]></string>
</resources>